...
            "value" : "Back"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "返回"
          }
        }
      }
    },
    "a11y_insert_image" : {
      "extractionState" : "stale",
...
            "value" : "Underline"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "下划线"
          }
        }
      }
    },
    "EntryAbility_label" : {
      "extractionState" : "stale",
...
    "footprint_title" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Footprint"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "足迹"
...
    "index_title" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Diary"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日记"
          }
        }
      }
    },
    "index_today" : {
      "extractionState" : "stale",
...
            "value" : "Write"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "写日记"
          }
        }
      }
    },
    "index_yesterday" : {
      "extractionState" : "stale",
...
            "value" : "District"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "区县"
          }
        }
      }
    },
    "loc_precision_exact" : {
      "extractionState" : "stale",
...
            "value" : "Save"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "search_all_loc" : {
      "extractionState" : "stale",
...
            "value" : "Choose a location"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "选择地点"
          }
        }
      }
    },
    "search_placeholder" : {
      "extractionState" : "stale",
...
    "search_title" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Search"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
...
    "settings_lang_en" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "English"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "English"
...
    "settings_language" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Language"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "语言"
...
            "value" : "Dark"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "深色"
          }
        }
      }
    },
    "settings_theme_light" : {
      "extractionState" : "stale",
...
    "settings_title" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "settings_version" : {
      "extractionState" : "stale",
...
